--- a/src/own.css
+++ b/src/own.css
@@ -80,9 +80,9 @@
 }
 .image-with-skills-wrapper {
   display: flex;
-  justify-content: flex-start; /* Align image to the left */
+  justify-content: flex-start;
   align-items: center;
-  width: max-content; /* Ensure the wrapper takes full width */
+  width: max-content;
   height: max-content;
   overflow: hidden;
 }
@@ -92,28 +92,37 @@
   flex-direction: column;
   grid-gap: 8px;
   padding: 1rem;
-  width: 20%; /* Adjust width as needed */
-  margin-left: 1rem; /* Space between image and skills list */
-  border-radius: 1rem;
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3);
-  background: linear-gradient(45deg, #e0bbe4, #add8e6);
+  max-width: 20%;
+  width: 10%;
+  margin-left: 1rem;
+}
+
+.experience-wrapper {
+  display: flex;
+  flex-direction: column;
+  grid-gap: 8px;
+  align-items: center;
+  padding: 1rem;
+  max-width: 100%;
+  text-align: center;
+  width: max-content;
 }
 
 .image-wrapper {
   display: flex;
-  justify-content: center; /* Center image horizontally */
-  align-items: center; /* Center image vertically */
-  overflow: hidden; /* Ensure no overflow during animation */
-  width: max-content; /* Adjust width as needed */
-  height: max-content; /* Adjust height as needed */
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  width: max-content;
+  height: max-content;
 }
 
 .fade-in-image {
-  opacity: 0; /* Start as fully transparent */
-  transform: translateX(-100%); /* Start position off the left side */
-  animation: fadeInFromLeft 2s forwards; /* Adjust the duration as needed */
-  width: max-content; /* Ensure the image covers the container */
-  height: auto; /* Maintain aspect ratio */
+  opacity: 0;
+  transform: translateX(-100%);
+  animation: fadeInFromLeft 2s forwards;
+  width: max-content;
+  height: auto;
 }
 
 @keyframes fadeInFromLeft {
@@ -132,5 +141,28 @@
   padding: 4px;
   &:hover {
     color: white;
+  }
+}
+
+.skipButton {
+  color: black;
+  &:hover {
+    color: white;
+  }
+}
+
+.backButton {
+  color: white;
+  &:hover {
+    color: darkred;
+  }
+}
+
+.link {
+  color: darkred;
+  text-decoration: underline;
+
+  &:hover {
+    color: black;
   }
 }
