some background css

--- a/src/own.css
+++ b/src/own.css
@@ -159,10 +159,21 @@
 }
 
 .link {
-  color: darkred;
+  color: rgb(221, 169, 221);
   text-decoration: underline;
 
   &:hover {
-    color: black;
+    color: white;
   }
+}
+
+.glass {
+  color: white;
+  background-color: black;
+  /* background: rgba(255, 255, 255, 0.18); */
+  border-radius: 4px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  /* backdrop-filter: blur(4.5px);
+  -webkit-backdrop-filter: blur(4.5px);
+  border: 1px solid rgba(255, 255, 255, 0.19); */
 }
